added descktop weight

--- a/index.html
+++ b/index.html
@@ -16,23 +16,47 @@
   <body>
     <header>
       <div class="header-wraper">
-        <div class="header-top">
-          <div class="contacts">
-            <div class="contact-item"></div>
-            <div class="contact-item"></div>
-            <div class="contact-item"></div>
+        <div class="header-top-wraper">
+          <div class="header-top">
+            <div class="contacts">
+              <div class="contact-item">
+                <span></span>
+                <p>Email: Plantingservice@7oroof.com</p>
+              </div>
+              <div class="contact-item">
+                <span></span>
+                <p>+01 123456789</p>
+              </div>
+              <div class="contact-item">
+                <span></span>
+                <p>2072 Pinnickinick Street, WA 98370</p>
+              </div>
+            </div>
+            <div class="lang">English<span class="arrow"></span></div>
           </div>
-          <div class="lang">English<span class="arrow"></span></div>
         </div>
-        <div class="header-bottom">
-          <div class="logo"><a href="#"></a></div>
-          <div class="menu-wraper">
-            <div class="call-back-wraper"><span class="call-back"></span></div>
-            <div class="menu"></div>
-            <div class="mobile-menu">
-              <div></div>
-              <div></div>
-              <div></div>
+        <div class="header-bottom-wraper">
+          <div class="header-bottom">
+            <div class="logo"><a href="#"></a></div>
+            <div class="menu-wraper">
+              <div class="header-menu">
+                <ul>
+                  <li class="menu-item">Home<span></span></li>
+                  <li class="menu-item">Company<span></span></li>
+                  <li class="menu-item">Services<span></span></li>
+                  <li class="menu-item">Project<span></span></li>
+                  <li class="menu-item">Blog<span></span></li>
+                  <li class="menu-item">Contact</li>
+                </ul>
+              </div>
+              <div class="call-back-wraper">
+                <span class="call-back"></span>
+              </div>
+              <div class="mobile-menu">
+                <div></div>
+                <div></div>
+                <div></div>
+              </div>
             </div>
           </div>
         </div>
