--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
               </div>
               <div class="call-back-wraper">
                 <span class="call-back"></span>
+                <p>Call Us</p>
               </div>
               <div class="mobile-menu">
                 <div></div>
