added hero section

--- a/index.html
+++ b/index.html
@@ -63,7 +63,40 @@
         </div>
       </div>
     </header>
-    <main></main>
+    <main>
+      <div class="hero-wraper">
+        <div class="mobile-hero-img">
+          <img src="img/medium-shot-woman-holding-plant-pots.jpg" alt="" />
+        </div>
+        <div class="container">
+          <div class="content-wraper">
+            <div class="hero-text">
+              <div class="planting-text">
+                <span></span>
+                <h3>landscape planting services</h3>
+              </div>
+              <h1 class="title">Perfect Landscape <span>Solution.</span></h1>
+              <p class="text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit
+                tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo.
+              </p>
+            </div>
+            <div class="btn-wraper">
+              <button class="btn">Get A Quate</button>
+              <div class="info">
+                <a href="#">See how it works</a><span></span>
+              </div>
+            </div>
+            <div class="customer-info">
+              <div class="customer-item"><span>500+</span>Happy Customrs</div>
+              <div class="customer-item"><span>800+</span>Garden Created</div>
+              <div class="customer-item"><span>100+</span>Team Members</div>
+            </div>
+            <div class="plant-bg"></div>
+          </div>
+        </div>
+      </div>
+    </main>
     <footer></footer>
   </body>
 </html>
