--- a/index.html
+++ b/index.html
@@ -93,7 +93,13 @@
               <div class="customer-item"><span>100+</span>Team Members</div>
             </div>
             <div class="plant-bg"></div>
+            <div class="plant-bg-desk"></div>
           </div>
+        </div>
+      </div>
+      <div class="service-wraper">
+        <div class="container-wraper">
+          <div class="container"></div>
         </div>
       </div>
     </main>
