--- a/index.html
+++ b/index.html
@@ -98,8 +98,100 @@
         </div>
       </div>
       <div class="service-wraper">
-        <div class="container-wraper">
-          <div class="container"></div>
+        <div class="container">
+          <div class="content-wraper">
+            <div class="title">
+              <h2>Services We <span>Provide</span></h2>
+              <p>
+                Lorem Ipsum is simply dummy text of the printing and typesetting
+                industry. Lorem Ipsum has been the industry's standard dummy
+                text ever since the 1500s, when an unknown printer took of type
+                and scrambled it to make a type specimen book.
+              </p>
+            </div>
+            <div class="service-block">
+              <div class="service-item">
+                <div class="item-icon"></div>
+                <div class="item-text">
+                  <h4>Tree Planting</h4>
+                  <p>
+                    Lorem Ipsum is simply dummy text of the printing and
+                    typesetting industry.
+                  </p>
+                </div>
+              </div>
+              <div class="service-item">
+                <div class="item-icon"></div>
+                <div class="item-text">
+                  <h4>Grass Cuttin</h4>
+                  <p>
+                    Lorem Ipsum is simply dummy text of the printing and
+                    typesetting industry.
+                  </p>
+                </div>
+              </div>
+              <div class="service-item">
+                <div class="item-icon"></div>
+                <div class="item-text">
+                  <h4>Garden Design</h4>
+                  <p>
+                    Lorem Ipsum is simply dummy text of the printing and
+                    typesetting industry.
+                  </p>
+                </div>
+              </div>
+              <div class="service-item">
+                <div class="item-icon"></div>
+                <div class="item-text">
+                  <h4>Plant Growing</h4>
+                  <p>
+                    Lorem Ipsum is simply dummy text of the printing and
+                    typesetting industry.
+                  </p>
+                </div>
+              </div>
+              <div class="service-item">
+                <div class="item-icon"></div>
+                <div class="item-text">
+                  <h4>Flower Scaping</h4>
+                  <p>
+                    Lorem Ipsum is simply dummy text of the printing and
+                    typesetting industry.
+                  </p>
+                </div>
+              </div>
+              <div class="service-item">
+                <div class="item-icon"></div>
+                <div class="item-text">
+                  <h4>Branch Cutting</h4>
+                  <p>
+                    Lorem Ipsum is simply dummy text of the printing and
+                    typesetting industry.
+                  </p>
+                </div>
+              </div>
+              <div class="service-item">
+                <div class="item-icon"></div>
+                <div class="item-text">
+                  <h4>Pests, Weed Control</h4>
+                  <p>
+                    Lorem Ipsum is simply dummy text of the printing and
+                    typesetting industry.
+                  </p>
+                </div>
+              </div>
+              <div class="service-item">
+                <div class="item-icon"></div>
+                <div class="item-text">
+                  <h4>Watering & Irrigation</h4>
+                  <p>
+                    Lorem Ipsum is simply dummy text of the printing and
+                    typesetting industry.
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </main>
