added exp section

--- a/index.html
+++ b/index.html
@@ -194,6 +194,76 @@
           </div>
         </div>
       </div>
+      <div class="exp-wraper">
+        <div class="bg-img"></div>
+        <div class="container">
+          <div class="content-wraper">
+            <div class="img-block-desk">
+              <div class="bg-block"></div>
+              <img src="img/exp-desk-img-big.jpg" alt="" class="main-img" />
+              <img src="img/exp-desk-img-small.jpg" alt="" class="small-img" />
+            </div>
+            <div class="desk-wraper">
+              <div class="tablet-wraper">
+                <div class="img-block">
+                  <div class="bg-block"></div>
+                  <img
+                    src="img/medium-shot-man-looking-plant.jpg"
+                    alt=""
+                    class="main-img"
+                  />
+                  <img
+                    src="img/close-up-hands-holding-house-plant.jpg"
+                    alt=""
+                    class="small-img"
+                  />
+                </div>
+                <div class="title">
+                  <h2>
+                    <span>25+ Years of Experience</span> in Gadening &
+                    Landscaping
+                  </h2>
+                  <p>
+                    <span
+                      >Lorem Ipsum is simply dummy text of the printing and
+                      typesetting industry. Lorem Ipsum has been of typ the
+                      industry's standard dummy text ever since the 1500s, when
+                      an unknown printer took a galley of type and scrambled it
+                      make a type specimen book. </span
+                    >Lorem Ipsum is simply dummy text of the printing and
+                    typesetting industry. Lorem Ipsum has been the text
+                    industry's standard dummy text ever since the 1500s, when an
+                    unknown printer took a galley of type and scrambled it make
+                    a type specimen book.Lorem Ipsum is simply dummy text of the
+                    printing and typesetting industry. Lorem Ipsum text has been
+                    the industry's standard dummy text ever since the 1500s,
+                    when an unknown printer took a galley of type and scrambled.
+                  </p>
+                </div>
+              </div>
+              <div class="cards-wraper">
+                <div class="cards-item">
+                  <div class="icon"></div>
+                  <p>Our Mission</p>
+                </div>
+                <div class="cards-item">
+                  <div class="icon"></div>
+                  <p>Our Vision</p>
+                </div>
+                <div class="cards-item">
+                  <div class="icon"></div>
+                  <p>Support Team</p>
+                </div>
+                <div class="cards-item">
+                  <div class="icon"></div>
+                  <p>Clients Trust</p>
+                </div>
+              </div>
+              <button class="discover-more-btn">Discover More</button>
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
     <footer></footer>
   </body>
