added comment section

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     />
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="reset.css" />
+    <link rel="stylesheet" type="text/css" href="slick/slick.css" />
+    <link rel="stylesheet" type="text/css" href="slick/slick-theme.css" />
     <title>HT-15</title>
   </head>
   <body>
@@ -264,7 +266,116 @@
           </div>
         </div>
       </div>
+      <div class="comment-wraper">
+        <div class="bg">
+          <div class="container">
+            <div class="content-wraper">
+              <div class="title">
+                <h2>What <span>Clients Saying</span></h2>
+                <p>
+                  Lorem Ipsum is simply dummy text of the printing and
+                  typesetting industry. Lorem Ipsum has been the industry's
+                  standard dummy text ever since the 1500s, when an unknown of
+                  type and scrambled it to make a type specimen book.
+                </p>
+              </div>
+              <div class="slider-wraper">
+                <div class="slider">
+                  <div>
+                    <div class="comment">
+                      <img src="img/client-photo.png" alt="" />
+                      <div class="comment-text">
+                        <p class="text">
+                          Lorem Ipsum is simply dummy text of the printig and
+                          typesetting industry. Lorem Ipsum has been the
+                          industry's standard dummy text ever since the 1500s,
+                          when an unknown printer took text of type and
+                          scrambled it to make.
+                        </p>
+                        <div class="name-and-rate">
+                          <div class="name">
+                            <p>Jane Smith</p>
+                            <p>Manager</p>
+                          </div>
+                          <div class="rate">
+                            <div class="star"></div>
+                            <div class="star"></div>
+                            <div class="star"></div>
+                            <div class="star"></div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div>
+                    <div class="comment">
+                      <img src="img/client-photo-1.png" alt="" />
+                      <div class="comment-text">
+                        <p class="text">
+                          Lorem Ipsum is simply dummy text of the printig and
+                          typesetting industry. Lorem Ipsum has been the
+                          industry's standard dummy text ever since the 1500s,
+                          when an unknown printer took text of type and
+                          scrambled it to make.
+                        </p>
+                        <div class="name-and-rate">
+                          <div class="name">
+                            <p>Jane Smith</p>
+                            <p>Manager</p>
+                          </div>
+                          <div class="rate">
+                            <div class="star"></div>
+                            <div class="star"></div>
+                            <div class="star"></div>
+                            <div class="star"></div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div>
+                    <div class="comment">
+                      <img src="img/client-photo.png" alt="" />
+                      <div class="comment-text">
+                        <p class="text">
+                          Lorem Ipsum is simply dummy text of the printig and
+                          typesetting industry. Lorem Ipsum has been the
+                          industry's standard dummy text ever since the 1500s,
+                          when an unknown printer took text of type and
+                          scrambled it to make.
+                        </p>
+                        <div class="name-and-rate">
+                          <div class="name">
+                            <p>Jane Smith</p>
+                            <p>Manager</p>
+                          </div>
+                          <div class="rate">
+                            <div class="star"></div>
+                            <div class="star"></div>
+                            <div class="star"></div>
+                            <div class="star"></div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
     <footer></footer>
+    <script
+      type="text/javascript"
+      src="https://code.jquery.com/jquery-1.11.0.min.js"
+    ></script>
+    <script
+      type="text/javascript"
+      src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"
+    ></script>
+    <script type="text/javascript" src="slick/slick.min.js"></script>
+    <script src="app.js"></script>
   </body>
 </html>
