added choose section

--- a/index.html
+++ b/index.html
@@ -270,6 +270,62 @@
           </div>
         </div>
       </div>
+      <div class="choose-wraper">
+        <div class="bg-leaf-left"></div>
+        <div class="bg-leaf-right"></div>
+        <div class="container">
+          <div class="content-wraper">
+            <div class="img-wraper">
+              <img src="img/chose-img.jpg" alt="" />
+            </div>
+            <div class="desk-wraper">
+              <div class="title-wraper">
+                <div class="title"><h2>Why Choose Us</h2></div>
+                <div class="text">
+                  <p>
+                    Lorem Ipsum is simply dummy text of the printing and
+                    typesetting industry. Lorem Ipsum has been text the
+                    industry's standard dummy text ever since the 1500s, when an
+                    unknown printer took a galley of type and scrambled it to
+                    make a type specimen book.
+                  </p>
+                </div>
+              </div>
+              <div class="proper-wraper">
+                <div class="proper">
+                  <div>
+                    <div></div>
+                    <div></div>
+                  </div>
+                  <p>Proper Take Care</p>
+                </div>
+                <div class="proper">
+                  <div>
+                    <div></div>
+                    <div></div>
+                  </div>
+                  <p>Proper Take Care</p>
+                </div>
+                <div class="proper">
+                  <div>
+                    <div></div>
+                    <div></div>
+                  </div>
+                  <p>Proper Take Care</p>
+                </div>
+                <div class="proper">
+                  <div>
+                    <div></div>
+                    <div></div>
+                  </div>
+                  <p>Proper Take Care</p>
+                </div>
+              </div>
+              <button class="btn">Discover More</button>
+            </div>
+          </div>
+        </div>
+      </div>
       <div class="comment-wraper">
         <div class="bg">
           <div class="container">
