added working and choose sectiones

--- a/index.html
+++ b/index.html
@@ -326,6 +326,81 @@
           </div>
         </div>
       </div>
+      <div class="working-wraper">
+        <div class="container">
+          <div class="content-wraper">
+            <div class="title">
+              <h2>Working <span>Process</span></h2>
+              <p>
+                Lorem Ipsum is simply dummy text of the printing and typesetting
+                industry. Lorem Ipsum has been the industry's standard dummy
+                text ever since the 1500s, when an unknown printer took of type
+                and scrambled it to make a type specimen book.
+              </p>
+            </div>
+            <div class="cards-wraper">
+              <div class="card">
+                <div class="icon-wraper">
+                  <div class="icon"></div>
+                  <div class="numb">1</div>
+                </div>
+                <div class="card-title">
+                  <h4>Consultation</h4>
+                  <p>
+                    Lorem Ipsum is simply dummy of the printing and typesetting
+                    test industry. Lorem Ipsum has been the industry's standard.
+                  </p>
+                </div>
+              </div>
+              <div class="card">
+                <div class="icon-wraper">
+                  <div class="icon"></div>
+                  <div class="numb">2</div>
+                </div>
+                <div class="card-title">
+                  <h4>Design & Work</h4>
+                  <p>
+                    Lorem Ipsum is simply dummy of the printing and typesetting
+                    test industry. Lorem Ipsum has been the industry's standard.
+                  </p>
+                </div>
+              </div>
+              <div class="card">
+                <div class="icon-wraper">
+                  <div class="icon"></div>
+                  <div class="numb">3</div>
+                </div>
+                <div class="card-title">
+                  <h4>Maintenance</h4>
+                  <p>
+                    Lorem Ipsum is simply dummy of the printing and typesetting
+                    test industry. Lorem Ipsum has been the industry's standard.
+                  </p>
+                </div>
+              </div>
+              <div class="card">
+                <div class="icon-wraper">
+                  <div class="icon"></div>
+                  <div class="numb">4</div>
+                </div>
+                <div class="card-title">
+                  <h4>Complete</h4>
+                  <p>
+                    Lorem Ipsum is simply dummy of the printing and typesetting
+                    test industry. Lorem Ipsum has been the industry's standard.
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="cta-wraper">
+              <div class="title">
+                <h5>Our Best Reliable Gardening and Lawn services</h5>
+              </div>
+              <button><span></span>Call Us</button>
+            </div>
+          </div>
+        </div>
+      </div>
       <div class="comment-wraper">
         <div class="bg">
           <div class="container">
@@ -586,10 +661,6 @@
                   </div>
                 </div>
                 <div class="swiper-pagination"></div>
-                <!--
-                <div class="swiper-button-prev"></div>
-                <div class="swiper-button-next"></div>
-                <div class="swiper-scrollbar"></div> -->
               </div>
             </div>
           </div>
@@ -604,24 +675,108 @@
         </div>
       </div>
     </main>
-    <footer></footer>
+    <footer>
+      <div class="footer-wraper">
+        <div class="container">
+          <div class="content-wraper">
+            <div class="title-wraper">
+              <div class="title"><h4>Subscribe To Newsletter</h4></div>
+              <div class="text">
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur ot adipiscing elit.
+                  Integer adipiscing erat eget risus to the sollicitudin
+                  pellentes queet non erat. Maecenas nibh dolor.
+                </p>
+              </div>
+              <div class="subscribe-wraper subscribe-desc">
+                <form action="">
+                  <input type="email" placeholder="Email..." />
+                  <button>Subscribe</button>
+                </form>
+                <div class="social-wraper">
+                  <div class="facebook"></div>
+                  <div class="twiter"></div>
+                  <div class="google"></div>
+                  <div class="linkedin"></div>
+                </div>
+              </div>
+            </div>
+            <div class="tablet-wraper">
+              <div class="subscribe-wraper">
+                <form action="">
+                  <input type="email" placeholder="Email..." />
+                  <button>Subscribe</button>
+                </form>
+                <div class="social-wraper">
+                  <div class="facebook"></div>
+                  <div class="twiter"></div>
+                  <div class="google"></div>
+                  <div class="linkedin"></div>
+                </div>
+              </div>
+              <div class="contact-wraper">
+                <div class="title">Contacts</div>
+                <p class="location">27 Division St, New York, NY 10002, USA</p>
+                <p class="tel">+01 1123456789, +01 1123456789</p>
+                <p class="tel tel-desc">+01 1123456789<br />+01 1123456789</p>
+                <p class="email">Solarpenal@gmail.Com</p>
+              </div>
+            </div>
+            <div class="tablet-wraper">
+              <div class="menu-wraper">
+                <div class="title"><h5>Useful Links</h5></div>
+                <ul class="menu">
+                  <li class="menu-item"><span></span>Home</li>
+                  <li class="menu-item"><span></span>About Us</li>
+                  <li class="menu-item"><span></span>Services</li>
+                  <li class="menu-item"><span></span>Project</li>
+                  <li class="menu-item"><span></span>Blog</li>
+                  <li class="menu-item"><span></span>FAQ</li>
+                  <li class="menu-item"><span></span>Contact Us</li>
+                  <li class="menu-item"><span></span>Thank You</li>
+                </ul>
+              </div>
+              <div class="service-footer-wraper">
+                <div class="title">Popular Sevices</div>
+                <div class="link-wraper">
+                  <a href="#tree-planting" class="tree-planting"
+                    >Tree Planting</a
+                  >
+                  <a href="#grass-cutting" class="grass-cutting"
+                    >Grass Cutting</a
+                  >
+                  <a href="#pests-weeds-control" class="pests-weeds-control"
+                    >Pests, Weeds Control</a
+                  >
+                  <a href="#project" class="Project">Project</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="cta-el-wraper">
+          <div class="title">
+            <h3>
+              We Have <span>Solutions</span> For Your <span>Garden.</span>
+            </h3>
+          </div>
+          <button>Get A Quate</button>
+        </div>
+        <div class="copyright-wraper">
+          <p class="copyright">
+            © Copyright Plant Store 2021-22. All right reserved. Design by
+            Themadbrains
+          </p>
+          <div class="link-wraper">
+            <a href="#" class="privacy">Privacy Policy</a>
+            <a href="#" class="sitemap">Sitemap</a>
+            <a href="#" class="terms">Terms of Use</a>
+          </div>
+        </div>
+      </div>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-    <script>
-      var swiper = new Swiper(".mySwiper", {
-        slidesPerView: 1,
-        spaceBetween: 10,
-        pagination: {
-          el: ".swiper-pagination",
-          clickable: true,
-        },
-        breakpoints: {
-          1440: {
-            slidesPerView: 3,
-            spaceBetween: 30,
-          },
-        },
-      });
-    </script>
+    <script></script>
     <script
       type="text/javascript"
       src="https://code.jquery.com/jquery-1.11.0.min.js"
