--- a/index.html
+++ b/index.html
@@ -401,6 +401,128 @@
           </div>
         </div>
       </div>
+      <div class="staff-wraper">
+        <div class="container">
+          <div class="content-wraper">
+            <div class="title-wraper">
+              <div class="title">
+                <h2>Our <span>Trained Staff</span></h2>
+                <p>
+                  Lorem Ipsum is simply dummy text of the printing and
+                  typesetting industry. Lorem Ipsum has text been the industry's
+                  standard dummy text ever since the 1500s, when an unknown of
+                  type and scrambled it to make a type specimen book.
+                </p>
+              </div>
+              <button>Discover More</button>
+            </div>
+            <div class="slider-staff-wraper">
+              <div class="slider-staff">
+                <div>
+                  <div
+                    style="background-image: url(img/staff-1.jpg)"
+                    class="staff"
+                  >
+                    <div class="info">
+                      <div class="title">
+                        <h5>Doris Jordan</h5>
+                        <p>Design Expert</p>
+                      </div>
+                      <div class="social">
+                        <div class="google"></div>
+                        <div class="facebook"></div>
+                        <div class="twiter"></div>
+                        <div class="pinterest"></div>
+                        <div class="linkedin"></div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div>
+                  <div
+                    style="background-image: url(img/staff-2.jpg)"
+                    class="staff"
+                  >
+                    <div class="info">
+                      <div class="title">
+                        <h5>Doris Jordan</h5>
+                        <p>Design Expert</p>
+                      </div>
+                      <div class="social">
+                        <div class="google"></div>
+                        <div class="facebook"></div>
+                        <div class="twiter"></div>
+                        <div class="pinterest"></div>
+                        <div class="linkedin"></div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div>
+                  <div
+                    style="background-image: url(img/staff-3.jpg)"
+                    class="staff"
+                  >
+                    <div class="info">
+                      <div class="title">
+                        <h5>Doris Jordan</h5>
+                        <p>Design Expert</p>
+                      </div>
+                      <div class="social">
+                        <div class="google"></div>
+                        <div class="facebook"></div>
+                        <div class="twiter"></div>
+                        <div class="pinterest"></div>
+                        <div class="linkedin"></div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div>
+                  <div
+                    style="background-image: url(img/staff-4.jpg)"
+                    class="staff"
+                  >
+                    <div class="info">
+                      <div class="title">
+                        <h5>Doris Jordan</h5>
+                        <p>Design Expert</p>
+                      </div>
+                      <div class="social">
+                        <div class="google"></div>
+                        <div class="facebook"></div>
+                        <div class="twiter"></div>
+                        <div class="pinterest"></div>
+                        <div class="linkedin"></div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div>
+                  <div
+                    style="background-image: url(img/staff-1.jpg)"
+                    class="staff"
+                  >
+                    <div class="info">
+                      <div class="title">
+                        <h5>Doris Jordan</h5>
+                        <p>Design Expert</p>
+                      </div>
+                      <div class="social">
+                        <div class="google"></div>
+                        <div class="facebook"></div>
+                        <div class="twiter"></div>
+                        <div class="pinterest"></div>
+                        <div class="linkedin"></div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
       <div class="comment-wraper">
         <div class="bg">
           <div class="container">
