added faq section and fix

--- a/index.html
+++ b/index.html
@@ -622,6 +622,133 @@
           </div>
         </div>
       </div>
+      <div class="faq-wraper">
+        <div class="container">
+          <div class="content-wraper">
+            <div class="wraper">
+              <div class="title">
+                <div class="title-wraper">
+                  <h2>Frequently</h2>
+                  <p class="special-text">&nbsp;Asked Questions</p>
+                </div>
+                <p>
+                  Lorem Ipsum is simply dummy text of the printing and
+                  typesetting industry. Lorem Ipsum has been the industry's
+                  standard dummy text ever since the 1500s, when an unknown of
+                  type and scrambled it to make a type specimen book.
+                </p>
+              </div>
+              <div class="questions-wraper">
+                <ul class="questions">
+                  <li class="question">
+                    <p>1. Can i consult about caring for Plants?</p>
+                    <div class="sign-wraper">
+                      <div class="minus"></div>
+                      <div class="plus"></div>
+                    </div>
+                  </li>
+                  <div class="hiden-text hiden">
+                    <p>
+                      Lorem ipsum dolor sit amet, elit & consectetur adipiscing
+                      elit. Integer adipiscing erat eget risus sollicitudin
+                      pellentes queet non erat. Maecenas nibh dolor, malesuada
+                      et bibendum a, sagittis accumsan ipsum. Pellentesque
+                      ultrices ultrices sapien, nec tincidunt nunc posuere ut.
+                      Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                      Name ultrices scelerisque tristique dolor vitae tincidunt.
+                      Aenean quis massa uada mi elementum elementum. Nec sapien
+                      convallis vulputate rhoncus vel dui.
+                    </p>
+                  </div>
+                  <li class="question">
+                    <p>2. How many types of plant are in the ...?</p>
+                    <div class="sign-wraper">
+                      <div class="minus"></div>
+                      <div class="plus"></div>
+                    </div>
+                  </li>
+                  <div class="hiden-text hiden">
+                    <p>
+                      Lorem ipsum dolor sit amet, elit & consectetur adipiscing
+                      elit. Integer adipiscing erat eget risus sollicitudin
+                      pellentes queet non erat. Maecenas nibh dolor, malesuada
+                      et bibendum a, sagittis accumsan ipsum. Pellentesque
+                      ultrices ultrices sapien, nec tincidunt nunc posuere ut.
+                      Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                      Name ultrices scelerisque tristique dolor vitae tincidunt.
+                      Aenean quis massa uada mi elementum elementum. Nec sapien
+                      convallis vulputate rhoncus vel dui.
+                    </p>
+                  </div>
+                  <li class="question">
+                    <p>3. What are the uses of plants in daily life?</p>
+                    <div class="sign-wraper">
+                      <div class="minus"></div>
+                      <div class="plus"></div>
+                    </div>
+                  </li>
+                  <div class="hiden-text hiden">
+                    <p>
+                      Lorem ipsum dolor sit amet, elit & consectetur adipiscing
+                      elit. Integer adipiscing erat eget risus sollicitudin
+                      pellentes queet non erat. Maecenas nibh dolor, malesuada
+                      et bibendum a, sagittis accumsan ipsum. Pellentesque
+                      ultrices ultrices sapien, nec tincidunt nunc posuere ut.
+                      Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                      Name ultrices scelerisque tristique dolor vitae tincidunt.
+                      Aenean quis massa uada mi elementum elementum. Nec sapien
+                      convallis vulputate rhoncus vel dui.
+                    </p>
+                  </div>
+                  <li class="question">
+                    <p>4. Can i consult about caring for Plants?</p>
+                    <div class="sign-wraper">
+                      <div class="minus"></div>
+                      <div class="plus"></div>
+                    </div>
+                  </li>
+                  <div class="hiden-text hiden">
+                    <p>
+                      Lorem ipsum dolor sit amet, elit & consectetur adipiscing
+                      elit. Integer adipiscing erat eget risus sollicitudin
+                      pellentes queet non erat. Maecenas nibh dolor, malesuada
+                      et bibendum a, sagittis accumsan ipsum. Pellentesque
+                      ultrices ultrices sapien, nec tincidunt nunc posuere ut.
+                      Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                      Name ultrices scelerisque tristique dolor vitae tincidunt.
+                      Aenean quis massa uada mi elementum elementum. Nec sapien
+                      convallis vulputate rhoncus vel dui.
+                    </p>
+                  </div>
+                  <li class="question">
+                    <p>5. What Information should i provide for...?</p>
+                    <div class="sign-wraper">
+                      <div class="minus"></div>
+                      <div class="plus"></div>
+                    </div>
+                  </li>
+                  <div class="hiden-text hiden">
+                    <p>
+                      Lorem ipsum dolor sit amet, elit & consectetur adipiscing
+                      elit. Integer adipiscing erat eget risus sollicitudin
+                      pellentes queet non erat. Maecenas nibh dolor, malesuada
+                      et bibendum a, sagittis accumsan ipsum. Pellentesque
+                      ultrices ultrices sapien, nec tincidunt nunc posuere ut.
+                      Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                      Name ultrices scelerisque tristique dolor vitae tincidunt.
+                      Aenean quis massa uada mi elementum elementum. Nec sapien
+                      convallis vulputate rhoncus vel dui.
+                    </p>
+                  </div>
+                </ul>
+              </div>
+            </div>
+            <div class="img-wraper">
+              <div class="img"></div>
+            </div>
+          </div>
+        </div>
+      </div>
       <div class="article-wraper">
         <div class="container">
           <div class="content-wraper">
